syntax = "proto3";
package protobufgenerated;

message FileDescriptorProto {
  string filename = 1;
  uint64 modTime = 2;
  uint64 size = 3;
}

message FileNameAndHashProto {
  string filename = 1;
  string hash = 2;
}

message FileProto {
  bytes contents = 1;
}

message OpenTxRequest {
  repeated FileDescriptorProto fileDescriptors = 1;
}

message OpenTxResponse {
  int64 revisionID = 1;
}

message GetRequiredHashesRequest {
  repeated FileNameAndHashProto = 1;
}

message GetRequiredHashesResponse {
  repeated string hashes = 1;
}
